@@ -359,7 +359,12 @@ abstract class xPDOQuery extends xPDOCriteria {
     public function condition(& $target, $conditions= '1', $conjunction= xPDOQuery::SQL_AND, $binding= null, $condGroup= 0) {
         $condGroup= intval($condGroup);
         if (!isset ($target[$condGroup])) $target[$condGroup]= array ();
-        $target[$condGroup][]= $this->parseConditions($conditions, $conjunction);
+        try {
+            $target[$condGroup][] = $this->parseConditions($conditions, $conjunction);
+        } catch (xPDOException $e) {
+            $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, $e->getMessage());
+            $this->where("2=1");
+        }
         return $this;
     }
 
@@ -411,7 +416,12 @@ abstract class xPDOQuery extends xPDOCriteria {
     }
 
     public function having($conditions) {
-        $this->query['having'][] = $this->parseConditions((array) $conditions);
+        try {
+            $this->query['having'][] = $this->parseConditions((array)$conditions);
+        } catch (xPDOException $e) {
+            $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, $e->getMessage());
+            $this->where("2=1");
+        }
         return $this;
     }
 
@@ -689,56 +699,62 @@ abstract class xPDOQuery extends xPDOCriteria {
                         if (!array_key_exists($key, $fieldMeta)) {
                             if (array_key_exists($key, $fieldAliases)) {
                                 $key= $fieldAliases[$key];
+                            } else {
+                                $key= '';
                             }
                         }
-                        if ($val === null) {
-                            $type= PDO::PARAM_NULL;
-                            if (!in_array($operator, array('IS', 'IS NOT'))) {
-                                $operator= $operator === '!=' ? 'IS NOT' : 'IS';
-                            }
-                        }
-                        elseif (isset($fieldMeta[$key]) && !in_array($fieldMeta[$key]['phptype'], $this->_quotable)) {
-                            $type= PDO::PARAM_INT;
-                        }
-                        else {
-                            $type= PDO::PARAM_STR;
-                        }
-                        if (in_array(strtoupper($operator), array('IN', 'NOT IN')) && is_array($val)) {
-                            $vals = array();
-                            foreach ($val as $v) {
-                                if ($v === null) {
-                                    $vals[] = null;
-                                } else {
-                                    switch ($type) {
-                                        case PDO::PARAM_INT:
-                                            $vals[] = (integer) $v;
-                                            break;
-                                        case PDO::PARAM_STR:
-                                            $vals[] = $this->xpdo->quote($v);
-                                            break;
-                                        default:
-                                            $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Error parsing {$operator} condition with key {$key}: " . print_r($v, true));
-                                            break;
-                                    }
+                        if (!empty($key)) {
+                            if ($val === null) {
+                                $type= PDO::PARAM_NULL;
+                                if (!in_array($operator, array('IS', 'IS NOT'))) {
+                                    $operator= $operator === '!=' ? 'IS NOT' : 'IS';
                                 }
                             }
-                            if (empty($vals)) {
-                                $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Encountered empty {$operator} condition with key {$key}");
+                            elseif (isset($fieldMeta[$key]) && !in_array($fieldMeta[$key]['phptype'], $this->_quotable)) {
+                                $type= PDO::PARAM_INT;
                             }
-                            $val = "(" . implode(',', $vals) . ")";
-                            $sql = "{$this->xpdo->escape($alias)}.{$this->xpdo->escape($key)} {$operator} {$val}";
-                            $result[]= new xPDOQueryCondition(array('sql' => $sql, 'binding' => null, 'conjunction' => $conj));
-                            continue;
+                            else {
+                                $type= PDO::PARAM_STR;
+                            }
+                            if (in_array(strtoupper($operator), array('IN', 'NOT IN')) && is_array($val)) {
+                                $vals = array();
+                                foreach ($val as $v) {
+                                    if ($v === null) {
+                                        $vals[] = null;
+                                    } else {
+                                        switch ($type) {
+                                            case PDO::PARAM_INT:
+                                                $vals[] = (integer) $v;
+                                                break;
+                                            case PDO::PARAM_STR:
+                                                $vals[] = $this->xpdo->quote($v);
+                                                break;
+                                            default:
+                                                $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Error parsing {$operator} condition with key {$key}: " . print_r($v, true));
+                                                break;
+                                        }
+                                    }
+                                }
+                                if (empty($vals)) {
+                                    $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, "Encountered empty {$operator} condition with key {$key}");
+                                }
+                                $val = "(" . implode(',', $vals) . ")";
+                                $sql = "{$this->xpdo->escape($alias)}.{$this->xpdo->escape($key)} {$operator} {$val}";
+                                $result[]= new xPDOQueryCondition(array('sql' => $sql, 'binding' => null, 'conjunction' => $conj));
+                                continue;
+                            }
+                            $field= array ();
+                            $field['sql']= $this->xpdo->escape($alias) . '.' . $this->xpdo->escape($key) . ' ' . $operator . ' ?';
+                            $field['binding']= array (
+                                'value' => $val,
+                                'type' => $type,
+                                'length' => 0
+                            );
+                            $field['conjunction']= $conj;
+                            $result[]= new xPDOQueryCondition($field);
+                        } else {
+                            throw new xPDOException("Invalid query expression");
                         }
-                        $field= array ();
-                        $field['sql']= $this->xpdo->escape($alias) . '.' . $this->xpdo->escape($key) . ' ' . $operator . ' ?';
-                        $field['binding']= array (
-                            'value' => $val,
-                            'type' => $type,
-                            'length' => 0
-                        );
-                        $field['conjunction']= $conj;
-                        $result[]= new xPDOQueryCondition($field);
                     }
                 }
             }
@@ -750,7 +766,7 @@ abstract class xPDOQuery extends xPDOCriteria {
                 ,'conjunction' => $conjunction
             ));
         }
-        elseif (($pktype == 'integer' && is_numeric($conditions)) || ($pktype == 'string' && is_string($conditions))) {
+        elseif (($pktype == 'integer' && is_numeric($conditions)) || ($pktype == 'string' && is_string($conditions) && $this->isValidClause($conditions))) {
             if ($pktype == 'integer') {
                 $param_type= PDO::PARAM_INT;
             } else {
@@ -773,6 +789,9 @@ abstract class xPDOQuery extends xPDOCriteria {
     public function isConditionalClause($string) {
         $matched= false;
         if (is_string($string)) {
+            if (!$this->isValidClause($string)) {
+                throw new xPDOException("SQL injection attempt detected: {$string}");
+            }
             foreach ($this->_operators as $operator) {
                 if (strpos(strtoupper($string), $operator) !== false) {
                     $matched= true;
@@ -781,6 +800,15 @@ abstract class xPDOQuery extends xPDOCriteria {
             }
         }
         return $matched;
+    }
+
+    protected function isValidClause($clause) {
+        $output = rtrim($clause, ' ;');
+        $output = preg_replace("/\\\\'.*?\\\\'/", '{mask}', $output);
+        $output = preg_replace('/\\".*?\\"/', '{mask}', $output);
+        $output = preg_replace("/'.*?'/", '{mask}', $output);
+        $output = preg_replace('/".*?"/', '{mask}', $output);
+        return strpos($output, ';') === false && strpos(strtolower($output), 'union') === false;
     }
 
     /**
