@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Reject xPDOQuery conditions with SQL injection attempts
 - Resolve xPDO::parseBindings() error from /e modifier fix
 - Fix xPDO::getCount() to work with queries containing group by
 - Replace reflection of PHP_SELF with SCRIPT_NAME in xPDO::log()
